--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- Welcome -->
     <section id="welcome">
       <div id="welcome-message">
-        <h1>Western North Carolina's Permier String Ensemble</h1>
+        <h1>Western North Carolina's Premier String Ensemble</h1>
         <h2>Unique, vibrant renditions of popular hits for unforgettable weddings and events.</h2>
         <div class="image-container">
           <img class="centered-image" src="images/string-quartet-clipart2.png" alt="string quartet" />
@@ -61,16 +61,18 @@
         <div class="about_item">
           <img src="images/violin-photo-white-bg.png" alt="High Country Quartet - violin" />
         </div>
-        <div id="about_heading">
-          <h2>Our identity is rooted in the mountains of North Carolina.</h2>
-          <h2>Our passion is crafting the ideal musical backdrop for events in the High Country and beyond.</h2>
-        </div>
-        <div class="about_text">
-          <p>Our members are active symphonic musicians, regularly performing with orchestras across North Carolina and
-            Tennessee.</p>
-          <p>Although our training is rooted in classical music, we came together with a shared vision of creating fresh
-            and vibrant string interpretations of popular music across all genres.</p>
-          <p>We take pride in our versatility and ability to provide high quality music for any occasion.</p>
+        <div class="about_item">
+          <div id="about_heading">
+            <h2>Our identity is rooted in the mountains of North Carolina.</h2>
+            <h2>Our passion is crafting the ideal musical backdrop for events in the High Country and beyond.</h2>
+          </div>
+          <div class="about_text">
+            <p>Our members are active symphonic musicians, regularly performing with orchestras across North Carolina and
+              Tennessee.</p>
+            <p>Although our training is rooted in classical music, we came together with a shared vision of creating fresh
+              and vibrant string interpretations of popular music across all genres.</p>
+            <p>We take pride in our versatility and ability to provide high quality music for any occasion.</p>
+          </div>
         </div>
       </div>
     </section>
@@ -83,57 +85,71 @@
       </div>
     </section>
 
+
+
+    <!-- Music -->
     <section id="music">
-      <div>
-        <div class="image-container">
-          <img src="images/quartet-photo-1.JPG" class="image-border" alt="High Country Quartet - violin" />
+      <div id="music_flex">
+
+        <div class="music_item image-item">
+          <div class="image-container">
+            <img src="images/quartet-photo-1.JPG" class="image-border" alt="High Country Quartet - violin" />
+          </div>
         </div>
 
-        <div id="music-library">
-          <h2>Something about having a huge library of music!</h2>
-          <p>Photo above will eventually be a new photo showing the string quartet performing in a picturesque setting.
-          </p>
-          <p>Some of our setlists below!</p>
-        </div>
-
-        <div class="accordion-block">
-          <button class="accordion-button">OLDIES AND CLASSICS<span class="icon">+</span></button>
-          <div class="accordion-content">
-            <ul>
-              <li>Can't Help Falling In Love - Elvis Presley</li>
-              <li>This Will Be (An Everlasting Love) - Natalie Cole</li>
-              <li>At Last</li>
-              <li>Moon River</li>
-              <li>Over The Rainbow</li>
-              <li>Unchained Melody</li>
-              <li>Hallelujah - Leonard Cohen</li>
-            </ul>
+        <div class="music_item text-item">
+          <div id="music-library">
+            <h2>Something about having a huge library of music!</h2>
+            <p>Photo above will eventually be a new photo showing the string quartet performing in a picturesque setting.
+            </p>
+            <p>Some of our setlists below!</p>
           </div>
+  
+          <div class="accordion-block">
+            <hr>
 
-          <button class="accordion-button">JAZZY COCKTAIL HOUR<span class="icon">+</span></button>
-          <div class="accordion-content">
-            <ul>
-              <li>Cheek To Cheek</li>
-              <li>I Get A Kick Out Of You</li>
-              <li>Night And Day</li>
-              <li>Fly Me To The Moon</li>
-              <li>The Way You Look Tonight</li>
-              <li>On The Street Where You Live</li>
-              <li>Take Five</li>
-            </ul>
-          </div>
+            <h3 class="accordion-button">OLDIES AND CLASSICS<span class="icon">+</span></h3>
+            <div class="accordion-content">
+              <ul>
+                <li>Can't Help Falling In Love - Elvis Presley</li>
+                <li>This Will Be (An Everlasting Love) - Natalie Cole</li>
+                <li>At Last</li>
+                <li>Moon River</li>
+                <li>Over The Rainbow</li>
+                <li>Unchained Melody</li>
+                <li>Hallelujah - Leonard Cohen</li>
+              </ul>
+            </div>
+            <hr>
+  
+            <h3 class="accordion-button">JAZZY COCKTAIL HOUR<span class="icon">+</span></h3>
+            <div class="accordion-content">
+              <ul>
+                <li>Cheek To Cheek</li>
+                <li>I Get A Kick Out Of You</li>
+                <li>Night And Day</li>
+                <li>Fly Me To The Moon</li>
+                <li>The Way You Look Tonight</li>
+                <li>On The Street Where You Live</li>
+                <li>Take Five</li>
+              </ul>
+            </div>
+            <hr>
+  
+            <h3 class="accordion-button">BRIDGERTON<span class="icon">+</span></h3>
+            <div class="accordion-content">
+              <ul>
+                <li>Wildest Dreams</li>
+                <li>POV</li>
+                <li>Yellow</li>
+                <li>In My Blood</li>
+                <li>Thank U, Next</li>
+                <li>You Belong With Me</li>
+                <li>Girls Like You</li>
+              </ul>
+            </div>
+            <hr>
 
-          <button class="accordion-button">BRIDGERTON<span class="icon">+</span></button>
-          <div class="accordion-content">
-            <ul>
-              <li>Wildest Dreams</li>
-              <li>POV</li>
-              <li>Yellow</li>
-              <li>In My Blood</li>
-              <li>Thank U, Next</li>
-              <li>You Belong With Me</li>
-              <li>Girls Like You</li>
-            </ul>
           </div>
         </div>
 
@@ -156,38 +172,54 @@
       </div>
     </section>
 
+
+    <!-- Experience -->
+
     <section id="experience">
       <div class="experience-heading">
         <h2>THE HIGH COUNTRY QUARTET EXPERIENCE</h2>
+        <p>We understand that the right music can elevate any event. We bring this level of fine-tuning and sensitivity to every performance, ensuring our music perfectly complements your event's unique atmosphere. Though classically trained, we are versatile and enthusiastic about exploring a wide range of styles. We're always excited to take on new and unusual projects.</p>
       </div>
 
-      <div class="experience-item">
-        <h3 class="accordion-button">Professional & Friendly<span class="icon">+</span></h3>
-        <div class="accordion-content"><p>We are a young and energetic string quartet with several years of combined
-          experience. Our members are full-time musicians and we're passionate about giving you the best possible
-          experience and the highest quality music.</p>
-        <a href="#about">Learn more about us ⇒</a>
-      </div>
-      </div>
+      <div id="experience-flex">
 
-      <div class="experience-item">
-        <h3 class="accordion-button">Musically Versatile<span class="icon">+</span></h3>
-        <div class="accordion-content"><p>We have experience playing all kinds of music and events. From contemporary
-          classical music permiers in a concert setting to pop background music for a private event, our experience goes
-          far beyond your typical weddings and events!</p>
-        <a href="#services">Read about our services ⇒</a>
-      </div>
-      </div>
+        <div class="experience-item">
+          <h3 class="accordion-button">Professional<span class="icon">+</span></h3>
+          <div class="accordion-content"><p>We are a young and energetic string quartet with several years of combined
+            experience. Our members are full-time musicians and we're passionate about giving you the best possible
+            experience and the highest quality music.</p>
+          <a href="#about">Learn more about us ⇒</a>
+        </div>
+        </div>
+  
+        <div class="experience-item">
+          <h3 class="accordion-button">Versatile<span class="icon">+</span></h3>
+          <div class="accordion-content"><p>We have experience playing all kinds of music and events. From contemporary
+            classical music permiers in a concert setting to pop background music for a private event, our experience goes
+            far beyond your typical weddings and events!</p>
+          <a href="#services">Read about our services ⇒</a>
+        </div>
+        </div>
+  
+        <div class="experience-item">
+          <h3 class="accordion-button">Easy<span class="icon">+</span></h3>
+          <div class="accordion-content"><p>We'll walk you through the entire process of planning the music for your event and
+            will be on call to answer any questions you have along the way.</p>
+        </div>
+        </div>
 
-      <div class="experience-item">
-        <h3 class="accordion-button">Easy Process<span class="icon">+</span></h3>
-        <div class="accordion-content"><p>We'll walk you through the entire process of planning the music for your event and
-          will be on call to answer any questions you have along the way.</p>
-        <a href="#services">Send us a note! ⇒</a>
-      </div>
+        <div class="experience-item">
+          <h3 class="accordion-button">Bespoke<span class="icon">+</span></h3>
+          <div class="accordion-content"><p>We take care to get every detail right when it comes to preparing for your special event. We love getting as detailed as possible!</p>
+          <a href="#services">Send us a note! ⇒</a>
+        </div>
+        </div>
+
       </div>
 
     </section>
+
+    <!-- Links -->
 
     <section id="links" class="alternate-background">
       <div id="links-logo">
